--- a/package.json
+++ b/package.json
@@ -12,15 +12,22 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.11.2",
-    "next": "13.2.4",
+    "mongoose": "^7.0.3",
+    "next": "^13.0.3",
+    "next-auth": "^4.21.1",
+    "qrcode": "^1.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.3"
+    "react-icons": "^4.8.0",
+    "typescript": "5.0.3",
+    "vercel": "^28.18.3"
   },
   "devDependencies": {
+    "@types/qrcode": "^1.5.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1"
