--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.11.2",
     "mongoose": "^7.0.3",
-    "next": "^13.0.3",
+    "next": "13.2.4",
     "next-auth": "^4.21.1",
     "qrcode": "^1.5.1",
     "react": "18.2.0",
