--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 NEXTAUTH_SECRET=w5OPHveBl3pvcQ7YT3/t15S9c39wOmavGUGxd03ckh0=
-NEXT_PUBLIC_MONGODB_URL=mongodb+srv://vercel-admin-user:bc4aNI8piC1ro84n@cluster0.ntk0b.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://vercel-admin-user:lCuxBqOvruSBqqjr@cluster0.ntk0b.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
