--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "eslint": "8.37.0",
-    "eslint-config-next": "13.2.4",
+    "eslint-config-next": "13.0.3",
     "framer-motion": "^10.11.2",
     "mongoose": "^7.0.3",
-    "next": "13.2.4",
+    "next": "13.0.3",
     "next-auth": "^4.21.1",
+    "nodemailer": "^6.9.1",
     "qrcode": "^1.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -27,6 +29,7 @@
     "vercel": "^28.18.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/qrcode": "^1.5.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
