--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 NEXTAUTH_SECRET=w5OPHveBl3pvcQ7YT3/t15S9c39wOmavGUGxd03ckh0=
 MONGODB_URI=mongodb+srv://vercel-admin-user:lCuxBqOvruSBqqjr@cluster0.ntk0b.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 
-BASE_URL=https://www.beninclub1931.com
+NEXTAUTH_URL=http://localhost:3000
+NEXT_ENV=development
