--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
@@ -17,9 +18,10 @@
     "eslint": "8.37.0",
     "eslint-config-next": "13.0.3",
     "framer-motion": "^10.11.2",
+    "mongodb": "^4.15.0",
     "mongoose": "^7.0.3",
     "next": "13.0.3",
-    "next-auth": "^4.21.1",
+    "next-auth": "^4.22.0",
     "nodemailer": "^6.9.1",
     "qrcode": "^1.5.1",
     "react": "18.2.0",
