--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.37.0",
     "eslint-config-next": "13.0.3",
     "framer-motion": "^10.11.2",
+    "moment": "^2.29.4",
     "mongodb": "^4.15.0",
     "mongoose": "^7.0.3",
     "next": "13.0.3",
