--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ MONGODB_URI=mongodb+srv://vercel-admin-user:lCuxBqOvruSBqqjr@cluster0.ntk0b.mong
 
 NEXTAUTH_URL=http://localhost:3000
 NEXT_ENV=development
+
+EMAIL_USER=info@beninclub1931.com
+EMAIL_PASS=Leunamme57#
