--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/nodemailer": "^6.4.7",
     "@types/qrcode": "^1.5.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
