--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ NEXT_ENV=development
 
 EMAIL_USER=info@beninclub1931.com
 EMAIL_PASS=Leunamme57#
+
+NEXT_PUBLIC_FLUTTERWAVE_PUBLIC_KEY=FLWPUBK_TEST-6a1e30713a8c6962ecb7d6cfbda2df69-X
+FLUTTERWAVE_SECRET_KEY=FLWSECK_TEST-b0decfc4685d841f0d540501a738b47b-X
