--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "bcryptjs": "^2.4.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.0.3",
+    "flutterwave-node-v3": "^1.1.5",
+    "flutterwave-react-v3": "^1.3.0",
     "framer-motion": "^10.11.2",
     "moment": "^2.29.4",
     "mongodb": "^4.15.0",
