--- a/.env
+++ b/.env
@@ -9,3 +9,8 @@ EMAIL_PASS=Leunamme57#
 
 NEXT_PUBLIC_FLUTTERWAVE_PUBLIC_KEY=FLWPUBK_TEST-6a1e30713a8c6962ecb7d6cfbda2df69-X
 FLUTTERWAVE_SECRET_KEY=FLWSECK_TEST-b0decfc4685d841f0d540501a738b47b-X
+
+AWS_ACCESS_KEY_ID=AKIAQ4JG4P55HCFFAM4G
+AWS_SECRET_ACCESS_KEY=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
+AWS_BUCKET_NAME=emirace
+AWS_BUCKET_REGION=eu-west-2
