--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.328.0",
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
@@ -23,6 +24,8 @@
     "moment": "^2.29.4",
     "mongodb": "^4.15.0",
     "mongoose": "^7.0.3",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "next": "13.0.3",
     "next-auth": "^4.22.0",
     "nodemailer": "^6.9.1",
@@ -36,6 +39,8 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/multer": "^1.4.7",
+    "@types/multer-s3": "^3.0.0",
     "@types/nodemailer": "^6.4.7",
     "@types/qrcode": "^1.5.0",
     "autoprefixer": "^10.4.14",
