--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "sharp": "^0.32.0",
+    "slugify": "^1.6.6",
     "typescript": "5.0.3",
     "vercel": "^28.18.3"
   },
