--- a/.env
+++ b/.env
@@ -7,8 +7,11 @@ NEXT_ENV=development
 EMAIL_USER=info@beninclub1931.com
 EMAIL_PASS=Leunamme57#
 
-NEXT_PUBLIC_FLUTTERWAVE_PUBLIC_KEY=FLWPUBK_TEST-6a1e30713a8c6962ecb7d6cfbda2df69-X
-FLUTTERWAVE_SECRET_KEY=FLWSECK_TEST-b0decfc4685d841f0d540501a738b47b-X
+NEXT_PUBLIC_FLUTTERWAVE_PUBLIC_KEY=FLWPUBK_TEST-cd1b3a48a3dc4dbda46607aac1f62e76-X
+FLUTTERWAVE_SECRET_KEY=FLWSECK_TEST-3e9cd6b6542f006f570b269e89336e4f-X
+
+# NEXT_PUBLIC_FLUTTERWAVE_PUBLIC_KEY=FLWPUBK-276932af6021c9adc2f6c546f5c9ef35-X
+# FLUTTERWAVE_SECRET_KEY=FLWSECK-5ff56cf7a2feff8cd9e52682859ecc44-1899973c8eavt-X
 
 AWS_ACCESS_KEY_ID=AKIAQ4JG4P55HCFFAM4G
 AWS_SECRET_ACCESS_KEY=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
