--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.0.11",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "eslint": "8.37.0",
     "eslint-config-next": "13.0.3",
     "flutterwave-node-v3": "^1.1.5",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.14",
     "@types/multer": "^1.4.7",
     "@types/multer-s3": "^3.0.0",
     "@types/nodemailer": "^6.4.7",
