--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ NEXTAUTH_URL=http://localhost:3000
 NEXT_ENV=development
 
 EMAIL_USER=info@beninclub1931.com
-EMAIL_PASS=Leunamme57#
+EMAIL_PASS=S7ZSutqpZjJELUm
 
 NEXT_PUBLIC_FLUTTERWAVE_PUBLIC_KEY=FLWPUBK_TEST-cd1b3a48a3dc4dbda46607aac1f62e76-X
 FLUTTERWAVE_SECRET_KEY=FLWSECK_TEST-3e9cd6b6542f006f570b269e89336e4f-X
