--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NEXTAUTH_SECRET=w5OPHveBl3pvcQ7YT3/t15S9c39wOmavGUGxd03ckh0=
 MONGODB_URI=mongodb+srv://vercel-admin-user:lCuxBqOvruSBqqjr@cluster0.ntk0b.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=https://www.beninclub1931.com
 NEXT_ENV=development
 
 EMAIL_USER=info@beninclub1931.com
